# quiterss2rssguard

./: .gitignore  AGENTS.md  LICENSE.txt  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lint.yml  pytest.yml
docs/: quiterss-db-feeds-example.md  quiterss-db-feeds.md  quiterss-db-info.md  quiterss-db-news.md  rssguard-db-accounts.md  rssguard-db-feeds.md  rssguard-db-info.md  rssguard-db-messages.md
quiterss2rssguard/: __main__.py  data.py
quiterss2rssguard/store/: __init__.py  base.py  quiterss.py  rssguard.py
tests/: conftest.py  test_quiterss_store.py  test_rssguard_store.py  test_store.py
